Use different names without new transport version